Indent Makefile output like [CC]

--- a/arch/sandbox/boards/Makefile
+++ b/arch/sandbox/boards/Makefile
@@ -7,11 +7,11 @@ all: $(EXEC)
 	@:
 
 $(EXEC): $(OBJ)
-	@echo [LD] $@
+	@echo '   [LD]' $@
 	@$(LD) -r $^ -o $@ $(LDFLAGS)
 
 %.o: %.c
-	@echo [CC] $@
+	@echo '   [CC]' $@
 	@$(CC) -o $@ -c $< $(CFLAGS)
 
 .PHONY: clean
