--- a/drivers/i2c/Makefile
+++ b/drivers/i2c/Makefile
@@ -8,11 +8,11 @@ all: $(EXEC)
 	@:
 
 $(EXEC): $(OBJ)
-	@echo [LD] $@
+	@echo '   [LD]' $@
 	@$(LD) -r $^ -o $@ $(LDFLAGS)
 
 %.o: %.c
-	@echo [CC] $@
+	@echo '   [CC]' $@
 	@$(CC) -o $@ -c $< $(CFLAGS)
 
 .PHONY: clean
