Add Kconfig support

--- a/arch/sandbox/boards/Makefile
+++ b/arch/sandbox/boards/Makefile
@@ -1,4 +1,11 @@
+# Read in config
+-include $(srctree)/include/config/auto.conf
+
 SRC= main.c
+
+#ifdef CONFIG_DRIVER_TEST
+#SRC += test_i2c.c
+#endif
 
 OBJ= $(SRC:.c=.o)
 EXEC=built-in.o
