--- a/arch/sandbox/os/Makefile
+++ b/arch/sandbox/os/Makefile
@@ -1,11 +1,38 @@
-obj-m += i2c-openbmc-stub.o
-KVERSION = $(shell uname -r)
+# Read in config
+-include $(srctree)/include/config/auto.conf
 
-all:
-	make -C /lib/modules/$(KVERSION)/build M=$(PWD) modules
-clean:
-	make -C /lib/modules/$(KVERSION)/build M=$(PWD) clean
-install:
-	sudo insmod i2c-openbmc-stub.ko chip_addr=0x23
-remove:
-	sudo rmmod i2c-openbmc-stub.ko
+SRC=
+
+ifdef XXXXX
+
+endif
+
+OBJ= $(SRC:.c=.o)
+
+ifneq ($(OBJ),)
+EXEC=built-in.o
+endif
+
+.PHONY: modules
+
+all: modules $(EXEC)
+	@:
+
+$(EXEC): $(OBJ)
+	@echo '   [LD]' $(shell pwd)/$@ | sed -e 's;:\?'$(srctree)/';;' -e 's;'$(srctree)/':\?;;'
+	@$(LD) -r $^ -o $@ $(LDFLAGS)
+
+%.o: %.c
+	@echo '   [CC]' $(shell pwd)/$@ | sed -e 's;:\?'$(srctree)/';;' -e 's;'$(srctree)/':\?;;'
+	@$(CC) -o $@ -c $< $(CFLAGS)
+
+modules:
+	@$(MAKE) -w -C $@ $(MAKECMDGOALS) $(MAKEFLAGS)
+
+.PHONY: clean
+
+clean distclean:
+	@rm -rf *.o *.d
+	@$(MAKE) -w -C modules $(MAKECMDGOALS) $(MAKEFLAGS)
+
+-include $(SRC:.c=.d)
