fix sandbox/modules Makefile

--- a/arch/sandbox/os/modules/Makefile
+++ b/arch/sandbox/os/modules/Makefile
@@ -2,8 +2,9 @@ obj-m += i2c-openbmc-stub.o
 KVERSION = $(shell uname -r)
 
 all:
-	export ARCH=x86 ;\
-	make -C /lib/modules/$(KVERSION)/build M=$(shell pwd) modules
+	@echo '   [CC]' $(shell pwd)/i2c-openbmc-stub.o | sed -e 's;:\?'$(srctree)/';;' -e 's;'$(srctree)/':\?;;'
+	@export ARCH=x86 ;\
+	make -s -C /lib/modules/$(KVERSION)/build M=$(shell pwd) modules
 clean distclean:
-	export ARCH=x86 ;\
-	make -C /lib/modules/$(KVERSION)/build M=$(shell pwd) clean
+	@export ARCH=x86 ;\
+	make -s $(MAKEFLAGS) -C /lib/modules/$(KVERSION)/build M=$(shell pwd) clean
