--- a/.config
+++ b/.config
@@ -12,5 +12,6 @@ CONFIG_BOARDINFO="sandbox"
 #
 # Drivers
 #
-CONFIG_DRIVER_TEST=y
-CONFIG_DRIVER_TEST1=y
+# CONFIG_DRIVER_TEST is not set
+# CONFIG_DRIVER_TEST1 is not set
+CONFIG_DRIVER_STUB=y
